--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ button:hover {
 
 #calcPanel h2{
 	/*font-family: 'BenchNine', sans-serif;*/
-	font-family:Helvetica, Arial, sans-serif;
+	font-family:verdana;
 	font-size:55px;
 	color:#FFFFFF;
 	padding:10px;
